# amazon-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHARLES_SETUP.md  Historical_Opportunities.xlsx  Opportunity1_Tecnomania.docx  Opportunity2_PinkPapaya.docx  PLAN.md  PL_Industry_Challenge.xlsx  Plan_v2.md  Project_Brief.docx  README.md  README_Industry_Challenge.docx  VISION.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  config.py  main.py  pricing.py  rag.py  requirements.txt
backend/agents/: extraction.py  gap_feasibility.py  llm_client.py  pipeline.py  pitch_deck.py  prompt_framework.py  risk_pricing_narrative.py  synthesis.py  win_prob_narrative.py
backend/data/: historical_opportunities.csv  market_intelligence.json  pink_papaya.txt  pricing_tables.json  service_description.txt  tecnomania.txt
backend/ml/: comparables.py  win_model.py
backend/schemas/: opportunity_result.py
backend/scripts/: parse_docs.py
backend/tests/: test_agents.py  test_comparables.py  test_llm_client.py  test_main.py  test_pipeline.py  test_pricing.py  test_prompt_framework.py  test_rag.py  test_win_model.py
frontend/: .dockerignore  .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/fixtures/: example_result.json  pink_papaya_result.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx  OpportunityPicker.tsx  PitchDeckView.tsx  SourcesPanel.tsx
frontend/src/components/sections/: AssumptionsOpenQuestions.tsx  CommercialStrategy.tsx  ExecutiveSummary.tsx  FollowUpActions.tsx  OpportunityScoreCard.tsx  PricingScenarios.tsx  RiskAssessment.tsx  WinProbabilitySection.tsx
frontend/src/components/ui/: Badge.tsx  Card.tsx  Gauge.tsx  TopBar.tsx
frontend/src/context/: OpportunityContext.tsx
frontend/src/lib/: api.ts
frontend/src/types/: contract.ts
